# mnm-item-db

./: .gitignore  CLAUDE.md  CLIENT-RE.md  CLIENT.md  COMBAT-CAPTURE.md  DEPLOY.md  GOVERNANCE.md  LICENSE  PRIVACY.md  PROVENANCE.md  README.md  SERVER.md  _check_parse.py  analyze_spellblade.py  analyze_spellblade_market.py  build_client.py  build_combat_site.py  build_hardcore_site.py  build_ledger_site.py  build_personal_site.py  build_relations.py  build_site.py  build_wiki_review.py  crop_creation.py  gen_basestats.py  gen_traits.py  gen_wiki_loot_fixes.py  gen_wiki_zone_fixes.py  merge_basestats.py  mine_local.py  mnm_chat_windows.py  mnm_client.py  mnm_client.spec  mnm_client_db.py  mnm_combat_capture.py  mnm_combat_channels.py  mnm_combat_filter_dialog.py  mnm_combat_memory.py  mnm_combat_ocr.py  mnm_combat_probe.py  (+35 more)
.github/workflows/: ci.yml  crowd-aggregate.yml  deploy-site.yml
client_re/: METADATA-CRYPTO.md  __init__.py  catalog_bundles.py  combat_memory.py  combat_record.py  combat_regions.py  combat_validate.py  crosswalk.py  decrypt_metadata.py  discover_combat_struct.py  dump_metadata.py  find_assets.py  il2cpp.py  item_assets.py  mnm_bundle.py  paths.py  process_io.py  signatures.py  version.py  watch_patch.py
client_re/mnmlib/: COMBAT-STRUCT.md  __init__.py  combat_struct.json  combat_struct.py  signatures.json  types.json  types.py
data/: WIKI-ISSUES.md  base_stats.json  base_stats_part1.json  base_stats_part2.json  base_stats_part3.json  base_stats_part4.json  combat-channels.json  combat-filter-ui.json  combat-sample-lines.txt  crowd-drops.json  crowd-kills.json  drops.json  items.json  ledger-manifest.json  monsters.json  spellblade-analysis.json  spellblade-market.json  zone_canonical.json  zone_map_layout.json  zones-wiki-queue.json  zones.json
data/client/: asset-candidates.json  build-fingerprint.json  bundle-index.json  client-re-summary.json  combat-memory-regions.json  ids-crosswalk.json  il2cpp-report.json  item-assets.json  metadata-decrypt.json  metadata-dump.json  patch-report.json  signature-verify.json  signatures-d57400cb5e626ad0.json
scripts/: analyze_combat_session.py  dps_session_analysis.py
server/: __init__.py  admin.html  aggregate.py  app.py  db.py
site/: acq-info.js  acquire-core.js  acquire.js  app.js  base_stats.js  characters.js  contribute.js  drops.js  gear-library.js  guild.js  index.html  items.js  mob-browse.js  monsters.js  personal.js  planner.js  store.js  styles.css  traits.js  trust.js
site/hardcore/: hardcore-data.js  hardcore.css  hardcore.js  index.html  submit-config.js  submit.html  submit.js
site/maps/: cut_pieces.py  editor.css  editor.html  editor.js  index.html  maps.css  viewer.js
site/maps/data/: wyrmsbane-pieces.json  wyrmsbane-rooms-3d.json  wyrmsbane-tomb.json
site/stats/: combat-stats.js  index.html  stats.css  stats.js  upload-payload.json
site/wiki-review/: index.html  review-data.js  review.css  review.js
tests/: test_build_relations.py  test_build_wiki_review.py  test_combat_filter_ui.py  test_combat_memory.py  test_combat_pvp.py  test_combat_site.py  test_combat_streams.py  test_combat_struct.py  test_combat_text.py  test_combat_validate.py  test_gen_wiki_loot_fixes.py  test_hardcore_detect.py  test_hardcore_parse.py  test_ledger_levelups.py  test_ledger_parse.py  test_provenance.py  test_push_wiki.py  test_sync_manifest.py  test_wiki_page_stubs.py  test_wiki_review_server.py
workers/ingest/: package.json  wrangler.toml
workers/ingest/src/: index.js
