[project]
name = "mnm-item-db"
version = "0.3.0"
description = "Searchable item and monster database for Monsters and Memories"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Indhomitable"}]
requires-python = ">=3.10"
keywords = ["monsters-and-memories", "mmorpg", "game-tools", "wiki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
]

dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
client-re = [
    "UnityPy>=1.24",
    "psutil>=5.9",
]
combat = [
    "mss>=9.0",
    "pillow>=10.0",
    "winrt-Windows.Media.Ocr>=3.2",
    "winrt-Windows.Graphics.Imaging>=3.2",
    "winrt-Windows.Storage.Streams>=3.2",
    "winrt-Windows.Foundation>=3.2",
    "winrt-Windows.Foundation.Collections>=3.2",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]
all = [
    "mnm-item-db[client-re,combat,server,dev]",
]

[project.urls]
Homepage = "https://github.com/dirizarry/mnm-item-db"
Repository = "https://github.com/dirizarry/mnm-item-db"
Issues = "https://github.com/dirizarry/mnm-item-db/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "mnm_item_db",
    "mnm_mob_db",
    "mnm_client",
    "mnm_ledger_db",
    "mnm_ledger_parse",
    "mnm_ledger_watch",
    "mnm_ledger_upload",
    "mnm_ledger_config",
    "mnm_provenance",
    "mnm_crowd_aggregate",
    "mnm_zones",
    "mnm_paths",
    "mnm_version",
    "mnm_updater",
    "mnm_wiki",
    "mnm_local",
    "mnm_client_db",
    "mnm_combat_ocr",
    "mnm_combat_text",
    "mnm_combat_watch",
    "mnm_combat_capture",
    "mnm_combat_memory",
    "mnm_combat_channels",
    "mnm_combat_filter_dialog",
    "mnm_combat_probe",
    "mnm_combat_pvp",
    "mnm_combat_streams",
    "mnm_chat_windows",
    "mnm_region_selector",
    "mnm_game_window",
    "mnm_hardcore_detect",
    "mnm_hardcore_parse",
    "mnm_hardcore_submit",
    "build_site",
    "build_relations",
    "build_ledger_site",
    "build_personal_site",
    "build_combat_site",
    "build_hardcore_site",
    "build_client",
    "normalize_data",
    "mine_local",
    "push_wiki",
    "push_wiki_batch",
    "wiki_writeback",
    "wiki_page_stubs",
    "wiki_review_server",
    "wiki_review_state",
    "sync_manifest",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator instead of if-else
]

[tool.ruff.lint.isort]
known-first-party = ["mnm_*", "build_*", "mine_*", "push_*", "wiki_*", "normalize_*", "sync_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
